# fastapi-structlog

./: Dockerfile  README.md  docker-compose.yml
app/: main.py  pyproject.toml
